Fix flex alignment for how it works

--- a/src/pages/Home/styles.module.css
+++ b/src/pages/Home/styles.module.css
@@ -62,13 +62,12 @@
 .steps {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
     gap: 32px;
     margin: 32px 0 0 0;
 }
 
 .step {
-    /* height: 384px; */
     margin: 0;
     flex: 1;
     border-radius: 4px;
@@ -89,6 +88,6 @@
 }
 
 .stepImage {
-    width: 40%;
+    height: 128px;
     margin: 0 auto;
 }
